--- a/matric/templates/matric/base.html
+++ b/matric/templates/matric/base.html
@@ -10,7 +10,7 @@
     <body>
         <div class="page-header">
             <a href="{% url 'school_record_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <h1><a href="/">Matric School Records</a></h1>
+            <h1><a href="/matric/">Matric School Records</a></h1>
         </div>
         <div class="content container">
             <div class="row">
