Forgotten 'new' button
Forgotten 'new' button

--- a/matric/templates/matric/matric_list.html
+++ b/matric/templates/matric/matric_list.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div>
+			<a href="{% url 'school_record_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             <h1><a href="/matric/">Matric School Records</a></h1>
         </div>
 
